--- a/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Index.cshtml
@@ -190,7 +190,7 @@
                 },
                 success: function (result) {
                     alert(result.message);
-                    RefreshTable('#congTyTiepNhanDatatable');
+                    RefreshTable('congTyTiepNhanDatatable');
                 },
                 error: function (error) {
                     alert(error.message);
