--- a/Vimas/Areas/HocVien/Views/ThongTinPhongVan/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinPhongVan/Edit.cshtml
@@ -111,18 +111,18 @@
                                 </div>
                             </div>
                             <div id="#congTyTiepNhan" class="form-group">
-                                @Html.LabelFor(q => q.IdCongTyTiepNhan, new { @class = "control-label col-md-5" })
+                                @Html.LabelFor(q => q.AvailableCongTyTiepNhan, new { @class = "control-label col-md-5" })
                                 <div class="col-md-6">
                                     <div class="fg-line">
-                                        @Html.DropDownListFor(q => q.IdCongTyTiepNhan, this.Model.AvailableCongTyTiepNhan, new { @class = "form-control", @id = "congTyTiepNhanDDL" })
+                                        @Html.DropDownListFor(q => q.IdCongTyTiepNhan, this.Model.AvailableCongTyTiepNhan, "Lựa công ty tiếp nhận", new { @class = "form-control", @id = "congTyTiepNhanDDL" })
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
-                                @Html.LabelFor(q => q.ThoiHanHopDong, new { @class = "control-label col-md-5" })
+                                @Html.LabelFor(q => q.ThoiHanHopDongEnum, new { @class = "control-label col-md-5" })
                                 <div class="col-md-6">
                                     <div class="fg-line">
-                                        @Html.TextBoxFor(q => q.ThoiHanHopDong, new { @class = "form-control" })
+                                        @Html.EnumDropDownListFor(q => q.ThoiHanHopDongEnum, "Lựa thời hạn hợp đồng", new { @class = "form-control select2" })
                                     </div>
                                 </div>
                             </div>
@@ -182,7 +182,7 @@
                                 @Html.LabelFor(q => q.AvailableCongTyChungNghe, new { @class = "control-label col-md-5" })
                                 <div class="col-md-6">
                                     <div class="fg-line">
-                                        @Html.DropDownListFor(q => q.IdCongTyChungNghe, this.Model.AvailableCongTyChungNghe, new { @class = "form-control", @id = "congTyChungNgheDDL" })
+                                        @Html.DropDownListFor(q => q.IdCongTyChungNghe, this.Model.AvailableCongTyChungNghe, "Lựa công ty tiếp nhận", new { @class = "form-control", @id = "congTyChungNgheDDL" })
                                     </div>
                                 </div>
                             </div>
