Fix bug cho SucKhoe và QuaTrinhLamViec. Sửa DB 1 chút, trường chiều cao và cân nặng trong bảng SucKhoe đổi type dữ liệu từ nchar(10) sang nvarchar(10)

--- a/Vimas/Areas/HocVien/Views/QuaTrinhLamViec/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/QuaTrinhLamViec/Create.cshtml
@@ -12,19 +12,19 @@
             @Html.HiddenFor(q => q.IdThongTinCaNhan)
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Thêm QTLV</h4>
+                <h4 class="modal-title">Thêm quá trình làm việc</h4>
             </div>
             <div class="modal-body">
                 <div class="form-horizontal">
                     <div class="form-group">
-                        @Html.LabelFor(q => q.TenCongTy, new { @class = "control-label col-md-4" })
+                        @Html.LabelFor(q => q.TenCongTy, new { @class = "control-label col-md-4" }) 
                         <div class="col-md-5">
                             @Html.TextBoxFor(q => q.TenCongTy, new { @class = "form-control col-sm-12" })
                             @Html.ValidationMessageFor(q => q.TenCongTy)
                         </div>
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(q => q.HinhThucCongTy, new { @class = "control-label col-md-4" })
+                        @Html.LabelFor(q => q.HinhThucCongTy, new { @class = "control-label col-md-4" }) 
                         <div class="col-md-5">
                             @Html.TextBoxFor(q => q.HinhThucCongTy, new { @class = " form-control col-sm-12" })
                             @Html.ValidationMessageFor(q => q.HinhThucCongTy)
