Update giao diện alert

--- a/Vimas/Areas/Admin/Views/TaiKhoan/Edit.cshtml
+++ b/Vimas/Areas/Admin/Views/TaiKhoan/Edit.cshtml
@@ -77,12 +77,12 @@
             url: '@Url.Action("Edit","TaiKhoan")',
             data: formData,
             success: function (result) {
-                alert(result.message);
+                swal("Chỉnh sửa", result.message, "success");
                 $('#editAccountModal').modal('hide');
                 RefreshTable('taiKhoanDatatable');
             },
             error: function (error) {
-                alert(result.message);
+                swal('Lỗi', error.message, 'error');
             }
         });
     }
