--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -44,6 +44,8 @@
 
     <!-- ZMDI -->
     <link href="~/Content/css/material-design-iconic-font.css" rel="stylesheet" />
+    <!-- Alert -->
+    <link href="~/Content/css/sweetalert.css" rel="stylesheet" />
 
     <!-- Custom -->
     <link href="~/Content/css/theme.css" rel="stylesheet" />
