--- a/Vimas/Areas/Admin/Views/TaiKhoan/Create.cshtml
+++ b/Vimas/Areas/Admin/Views/TaiKhoan/Create.cshtml
@@ -76,12 +76,12 @@
             url: '@Url.Action("Create","TaiKhoan")',
             data: formData,
             success: function (result) {
-                alert(result.message);
+                swal("Thêm mới", result.message, "success");
                 $('#createAccountModal').modal('hide');
                 RefreshTable('taiKhoanDatatable');
             },
             error: function (error) {
-                alert(result.message);
+                swal('Lỗi', error.message, 'error');
             }
         });
     }
