--- a/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
@@ -117,20 +117,32 @@
     }
 
     function Delete(id) {
-        if (confirm("Bạn có chắc xóa dòng này?")) {
+        swal({
+            title: "Bạn có chắc xóa dòng này?",
+            type: "warning",
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: "Vâng, chắc chắn Xoá",
+            confirmButtonClass: 'btn btn-success',
+            cancelButtonText: "Không",
+            showCancelButton: true,
+            closeOnConfirm: false
+        }, function () {
             $.ajax({
+                type: "POST",
                 url: '@this.Url.Action("Delete")',
-                data: { id},
-                        method: "POST",
+                data: {
+                    id: id,
+                },
                 success: function (result) {
-                    alert(result.message);
-                    RefreshCongTyChungNgheTable();
+                    swal("Xoá", result.message, "success");
+                    RefreshTable('thongTinPhongVanTable');
                 },
                 error: function (error) {
-                    alert(error.message);
+                    swal('Lỗi',error.message,'error');
                 }
             });
-        }
+        });
     }
 
     function RefreshCongTyChungNgheTable() {
