--- a/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Create.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Create.cshtml
@@ -100,13 +100,13 @@
                 url: '@Url.Action("Create","CongTyTiepNhan")',
                 data: formData,
                 success: function (result) {
-                    alert(result.message);
+                    swal("Thêm mới", result.message, "success");
                     $('#createCTTNPanel').modal('hide');
                     $('#createCTTNPanel').html("");
                     RefreshTable('congTyTiepNhanDatatable');
                 },
                 error: function (error) {
-                    alert(result.message);
+                    swal('Lỗi', error.message, 'error');
                 }
             });
         }
