--- a/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Index.cshtml
@@ -135,11 +135,11 @@
                     id: idCTTN,
                 },
                 success: function (result) {
-                    alert(result.message);
+                    swal("Xoá", result.message, "success");
                     RefreshTable('#congTyTiepNhanDatatable');
                 },
                 error: function (error) {
-                    alert(error.message);
+                    swal('Lỗi', error.message, 'error');
                 }
             });
         }
@@ -157,7 +157,7 @@
                 $('#createCTTNPanel').modal('show');
             },
             error: function (error) {
-                alert("Error Occured")
+                swal('Lỗi', error.message, 'error');
             }
         });
     }
@@ -175,7 +175,7 @@
                 $('#editCTTNPanel').modal('show');
             },
             error: function (error) {
-                alert("Error Occured")
+                swal('Lỗi', error.message, 'error');
             }
         });
     }
@@ -189,11 +189,11 @@
                     id: idCTTN,
                 },
                 success: function (result) {
-                    alert(result.message);
+                    swal("Xoá", result.message, "success");(result.message);
                     RefreshTable('congTyTiepNhanDatatable');
                 },
                 error: function (error) {
-                    alert(error.message);
+                    swal('Lỗi', error.message, 'error');
                 }
             });
         }
