--- a/Vimas/Areas/HeThong/Views/HopDongDOLAB/Detail.cshtml
+++ b/Vimas/Areas/HeThong/Views/HopDongDOLAB/Detail.cshtml
@@ -101,13 +101,13 @@
             processData: false,
             contentType: false,
             success: function (result) {
-                alert(result.message);
+                swal("Thêm mới", result.message, "success");
                 $('#createDOLABPanel').modal('hide');
                 $('#createDOLABPanel').html("");
                 RefreshTable('DOLABDatatable');
             },
             error: function (error) {
-                alert(result.message);
+                swal('Lỗi', error.message, 'error');
             }
         });
     };
