--- a/Vimas/Areas/HeThong/Views/HopDongDOLAB/Edit.cshtml
+++ b/Vimas/Areas/HeThong/Views/HopDongDOLAB/Edit.cshtml
@@ -158,13 +158,13 @@
             processData: false,
             contentType: false,
             success: function (result) {
-                alert(result.message);
+                swal("Chỉnh sửa", result.message, "success");
                 $('#editDOLABPanel').modal('hide');
                 $('#editDOLABPanel').html("");
                 RefreshTable('DOLABDatatable');
             },
             error: function (error) {
-                alert(result.message);
+                swal('Lỗi', error.message, 'error');
             }
         });
     };
@@ -300,14 +300,14 @@
             dataType: 'json',
             success: function (result) {
                 if (result.success) {
-                    alert(result.message);
+                    swal("Xoá", result.message, "success");
                     RefreshTable('selectedTTCNTable');
                 } else {
-                    alert(result.message);
+                    swal('Lỗi', error.message, 'error');
                 }
             },
             error: function (result) {
-                alert(result.message);
+                swal('Lỗi', error.message, 'error');
             }
         })
     }
@@ -327,14 +327,14 @@
                 dataType: 'json',
                 success: function (result) {
                     if (result.success) {
-                        alert(result.message);
+                        swal("Thêm mới", result.message, "success");
                         RefreshTable('selectedTTCNTable');
                     } else {
-                        alert(result.message);
+                        swal('Lỗi', error.message, 'error');
                     }
                 },
                 error: function (result) {
-                    alert(result.message);
+                    swal('Lỗi', error.message, 'error');
                 }
             });
         }
