Fix giao diện cho menu (bỏ bớt mấy cái không cần thiết) và fix bug delete bên WTLV

--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
@@ -686,7 +686,7 @@
         });
     }
 
-    function deleteQTLT(idQTLV) {
+    function deleteQTLV(idQTLV) {
         swal({
             title: "Bạn có chắc xóa dòng này?",
             type: "warning",
